# ufs

./: .gitignore  Dockerfile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docs/: DESIGN.md
src/dfs/: __init__.py  api.py  auth.py  cache.py  config.py  delete.py  fetch.py  gossip.py  hashing.py  index.py  main.py  mesh.py  metalog.py  namespace.py  peers.py  pins.py  reconcile.py  scanner.py  writer.py
tests/: test_core.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
