[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dfs-agent"
description = "UFS/dfs: pooled multi-node file storage agent"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "blake3>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
dfs-agent = "dfs.main:main"

[tool.setuptools.dynamic]
# Single source of truth for the version number is the VERSION file.
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
